fixed play button text alignment

--- a/components/AudioPlayer/AudioPlayer.module.css
+++ b/components/AudioPlayer/AudioPlayer.module.css
@@ -34,7 +34,7 @@
   font-family: inherit;
 
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: center;
 
   width: 1.5em;
@@ -81,7 +81,7 @@
   appearance: none;
   width: 100%;
   cursor: pointer;
-  margin-bottom: 0.6em;
+  margin-bottom: 0.4em;
 }
 
 .progress__bar {
